# countdown_cli

./: Cargo.toml  config.toml  deny.toml
src/: command.rs  config.rs  main.rs  notify.rs
