[package]
name = "countdown_cli"
version = "0.2.1"
edition = "2021"

[profile.release]
lto = "thin"

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
ctrlc = "3"
crossterm = "0.29"
toml = "0.9"
serde = "1"
serde_derive = "1"
colored = "3"
clap = { version = "4", features = ["derive"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
